# Iced_demo

./: Cargo.toml  README.md
itemeditor/: Cargo.toml
itemeditor/src/: main.rs
itemeditor/src/item/: item_ui.rs  item_ui_combat_bufs.rs  item_ui_data.rs  item_ui_generic.rs  item_ui_menu.rs  item_ui_skill_bufs.rs  itemdata.rs  messages.rs  mod.rs
styles/: cargo.toml
types/: Cargo.toml
types/src/: effecttype.rs  enums.rs  lib.rs  rgb.rs  sharedstructs.rs
ui_helper/: Cargo.toml
ui_helper/src/: ui_controls.rs
ui_helper/src/controls/: button.rs  checkbox.rs  number_selection.rs
