[package]
name = "item_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "af7cbf0", features = [
    "canvas",
    "tokio",
    "image",
    "debug",
    "wgpu",
] }
iced_style = { git = "https://github.com/iced-rs/iced.git", rev = "af7cbf0" }
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", branch = "beta", default-features = false, features = [
    "number_input",
    "color_picker",
    "colors",
] }
araiseal_styles = { path = "../styles" }
araiseal_ui = { path = "../ui_helper" }
araiseal_types = { path = "../types" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.3"
derivative = "2.2"
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
strum_macros = "0.23"
num-traits = "0.2"
arr_macro = "0.1"
num_enum = "0.5"
slog = "2.7"
sloggers = "2.1"
backtrace = "0.3"
lazy_static = "1.4"
