[package]
name = "araiseal_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
derivative = "2.2"
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
strum_macros = "0.23"
num-traits = "0.2"
num_enum = "0.5"
