[package]
name = "araiseal_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "af7cbf0", features = [
    "canvas",
    "tokio",
    "image",
    "debug",
    "wgpu",
] }
iced_style = { git = "https://github.com/iced-rs/iced.git", rev = "af7cbf0" }
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", branch = "beta", default-features = false, features = [
    "number_input",
    "color_picker",
    "colors",
] }
araiseal_styles = { path = "../styles" }
rand = "0.8"
num-traits = "0.2"
lazy_static = "1.4"
